# cima-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape
examples/: _demo_render.py  live_demo.py  live_queries.py  offline_demo.py
src/pharma_agent/: __init__.py  agui_demo.html  agui_server.py  api.py  atui.py  cli.py  graph.py  llm.py  mcp_client.py  prompts.py  state.py  testing.py
src/pharma_agent/nodes/: __init__.py  _helpers.py  execute.py  plan.py  respond.py  triage.py  verify.py
tests/: conftest.py  test_api.py  test_execute.py  test_graph_receta.py  test_helpers.py  test_plan.py  test_smoke_live.py  test_triage.py  test_verify_and_respond.py
