[project]
name = "pharma-agent"
version = "0.1.0"
description = "Agente LangGraph que consume el servidor MCP mcp-aemps para responder consultas de medicación citando siempre la fuente oficial AEMPS/CIMA."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "PharmaFast" }]
keywords = ["aemps", "cima", "mcp", "langgraph", "farmacia", "medicamentos"]

dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Backend Ollama Cloud (endpoint OpenAI-compatible). Solo si usas un modelo
# "ollama:<modelo>" en PHARMA_AGENT_MODEL.
ollama = [
    "langchain-openai>=0.2",
]
# Arquitectura AGUI: servidor FastAPI con SSE (protocolo AG-UI).
agui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
# Arquitectura ATUI: terminal enriquecido con Rich (live pipeline + fotos).
atui = [
    "rich>=13.0",
]

[project.scripts]
pharma-agent = "pharma_agent.cli:main"
pharma-agent-atui = "pharma_agent.atui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pharma_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not live'"
markers = [
    "live: smoke test que golpea el servidor mcp-aemps real (no corre en CI por defecto)",
]
testpaths = ["tests"]
